
 
     Release Notes for MogwaiERDesignerNG
     
Requirements

* Java 6 Runtime ( SDK not required )

License

This software uses or is based on the following libraries:

  Apache Commons ( www.apache.org )
  Apache Batik ( www.apache.org )  
  JGraph ( www.jgraph.com )  
  JGoodies ( www.jgoodies.com )  
  JUNG ( jung.sourceforge.net )    
  SQuirreL ( squirrel-sql.sourceforge.net )    
  Eclipse ZEST ( www.eclise.org )  
  ... Many more ...

Release 1.0

* First support for editing domains, defaultvalues, tables and relations
* First support for reverse engineering of different JDBC datasources
* JDBC dialects available for MySQL, MySQL(InnoDB), MSSQL, Oracle , Postgres 
  and DB2

Release 1.0.1

* Tested reverse engineering with the following databases
  MSSQL Dialect  : Microsoft SQL Server Version 09.00.3042 ( JTDS JDBC - Driver 1.2.2 )
                   Microsoft SQL Server 08.00.2039 ( JTDS JDBC - Driver 1.2.2 )
  MySQL Dialect  : MySQL Version 5.0.45-community-nt (MySQL Connector 5.1.5 )
                   MySQL Version 4.1.22-community-nt (MySQL Connector 5.1.5 )
  Oracle Dialect : Oracle Database 10g Release 10.2.0.3.0 - Production ( Oracle 10 client )
* New JGraph Version ( Image Export is now working correctly )
* Added support for index editing
* Removed DB2 dialect ( no test environment available )
* Added generic JDBC dialect
* Added schema validation for loading ERDesigner models from file
* Added configuration files for dialect datatypes
     
Release 1.0.2

* First version including the SquirrelSQL plugin ( for Squirrel 2.6.4 )
* Added SquirrelDialect to interface with the Squirrel DatabaseMezaData API
* DOT Path ( AT&T Layout library ) is now configurable with preferences dialog
* Tested reverse engineering with the following databases
  PostgreSQL Dialect : PostgreSQL 8.2.6 ( JDBC3 Driver )
  
Release 1.1

* Refactored domain system for support of size, decimal digits and radix
* Added model modification tracker to track model changes